--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -39,28 +39,14 @@
             android:layout_below="@id/top_section"
             android:padding="25dp">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/product_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Aspirina"
-                    android:textSize="24sp"
-                    android:fontFamily="@font/gilroybold"
-                    android:textColor="#181725"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
-                <ImageView
-                    android:id="@+id/favorite_icon"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_favorite"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:contentDescription="Favorite"/>
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Aspirina"
+                android:textSize="24sp"
+                android:fontFamily="@font/gilroybold"
+                android:textColor="#181725"/>
 
             <TextView
                 android:id="@+id/product_subtitle"
