--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -23,6 +23,18 @@
             android:layout_gravity="center_horizontal"
             android:contentDescription="Product image" />
 
+        <ImageView
+            android:id="@+id/favoriteIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_favorite"
+            android:contentDescription="Remover dos favoritos"
+            android:clickable="true"
+            android:focusable="true"/>
+
         <TextView
             android:id="@+id/textProductName"
             android:layout_width="match_parent"
