--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -12,12 +12,23 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
+        <!-- Delete Button - Posicionado no topo à direita -->
+        <ImageView
+            android:id="@+id/delete_button"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_cart_delete"
+            android:padding="3dp" />
+
         <ImageView
             android:id="@+id/product_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
+            android:layout_below="@id/delete_button"
+            android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
             android:src="@drawable/mock_remedio" />
 
@@ -25,8 +36,9 @@
             android:id="@+id/product_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_below="@id/delete_button"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:layout_toStartOf="@+id/quantity_controls"
             android:layout_toEndOf="@id/product_image"
             android:orientation="vertical">
@@ -55,7 +67,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
+            android:layout_below="@id/delete_button"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -78,17 +91,10 @@
             <ImageView
                 android:id="@+id/plus_button"
                 android:layout_width="30dp"
-                android:layout_height="match_parent"
+                android:layout_height="30dp"
                 android:src="@drawable/ic_add_blue" />
-            <ImageView
-                android:id="@+id/delete_button"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_below="@id/quantity_controls"
-                android:layout_marginLeft="15dp"
-                android:src="@drawable/ic_delete" />
+
         </LinearLayout>
 
-
     </RelativeLayout>
-</androidx.cardview.widget.CardView> 
+</androidx.cardview.widget.CardView>
